# dyros_robot_controller

./: .gitignore  CMakeLists.txt  README.md  package.xml
drc/: __init__.py  type_define.py
drc/manipulator/: robot_controller.py  robot_data.py
drc/mobile/: __init__.py  robot_controller.py  robot_data.py
drc/mobile_manipulator/: robot_controller.py  robot_data.py
examples/: README.md
examples/C++/: CMakeLists.txt
examples/C++/include/: fr3_controller.hpp  fr3_xls_controller.hpp  xls_controller.hpp
examples/C++/include/mujoco/: glfw_adapter.h  glfw_corevideo.h  simulate.h
examples/C++/src/: fr3_controller.cpp  fr3_xls_controller.cpp  main.cpp  xls_controller.cpp
examples/C++/src/mujoco/: glfw_adapter.cc  glfw_dispatch.cc  platform_ui_adapter.cc  simulate.cc
examples/python/: dyros_robot_controller_example.py  fr3_controller.py  fr3_xls_controller.py  mujoco_bridge.py  xls_controller.py
examples/robots/fr3/: fr3.srdf  fr3.urdf  fr3.xml  scene.xml
examples/robots/fr3_xls/: fr3_xls.srdf  fr3_xls.urdf  fr3_xls.xml  scene.xml
examples/robots/xls/: scene.xml  summit_xls.xml
include/: math_type_define.h  suhan_benchmark.h
include/dyros_robot_controller/: QP_base.h  type_define.h
include/dyros_robot_controller/manipulator/: QP_ID.h  QP_IK.h  robot_controller.h  robot_data.h
include/dyros_robot_controller/mobile/: robot_controller.h  robot_data.h
include/dyros_robot_controller/mobile_manipulator/: QP_ID.h  QP_IK.h  robot_controller.h  robot_data.h
src/: bindings.cpp
src/manipulator/: QP_ID.cpp  QP_IK.cpp  robot_controller.cpp  robot_data.cpp
src/mobile/: robot_controller.cpp  robot_data.cpp
src/mobile_manipulator/: QP_ID.cpp  QP_IK.cpp  robot_controller.cpp  robot_data.cpp
